# goldsrc_plugin

./: CHANGELOG.md  Cargo.toml  README.md  bundler.toml
src/: editor.css  editor.rs  lib.rs  presets.rs
