[package]
name = "goldsrc_plugin"
version = "0.3.5"
edition = "2021"
authors = ["shipi <ariasmartin1@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "shipisnature.com"
description = "GoldSrc-based reverb plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
goldsrc_dsp = { git = "https://github.com/Shipi1/goldsrc_dsp.git", rev = "9695b98" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
pollster = "0.3"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[patch."https://github.com/RustAudio/baseview.git"]
baseview = { git = "https://github.com/Shipi1/baseview.git", branch = "fix/win-nchittest-modal-freeze" }
